--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
     "compilerOptions": {
         "module": "ESNext",
         "target": "ES2020",
-        "lib": ["ES2020", "DOM", "DOM.Iterable"],
+        "lib": [
+            "ES2020",
+            "DOM",
+            "DOM.Iterable"
+        ],
         "moduleResolution": "Bundler",
         "types": [],
         "sourceMap": true,
@@ -16,7 +20,16 @@
         "exactOptionalPropertyTypes": true,
         "noUncheckedSideEffectImports": true,
         "moduleDetection": "force",
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                "src/*"
+            ]
+        }
     },
-    "include": ["src", "tests"]
+    "include": [
+        "src",
+        "tests"
+    ]
 }
